Fixed table spacing on mobile, small browsers

--- a/main.css
+++ b/main.css
@@ -63,10 +63,10 @@ h2 {
 }
 
 table {
-    margin-left: 36%;
-    margin-right: 36%;
+
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 25px;
-    padding: 2px;
     border: 2px solid #041526;
 }
 
@@ -117,3 +117,4 @@ input {
     display: inline-block;
     width: 100px;
 }
+
